[package]
name = "ina229"
version = "0.1.0"
edition = "2021"
authors = [
    "Justin Latimer <justinlatimer@gmail.com>",
]
description = "Driver for INA229 SPI voltage/current/power monitor"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/justinlatimer/ina229"

[dependencies]
bitflags = "1.3"
byteorder = { version = "1", default-features = false }
embedded-hal = "0.2"

[dev-dependencies]
embedded-hal-mock = "0.9"
